Refactor Class Dogbreed and bug IsInDogHouse

--- a/RefactoringDog.Application.Contracts/RefactoringDog.Application.Contracts.csproj
+++ b/RefactoringDog.Application.Contracts/RefactoringDog.Application.Contracts.csproj
@@ -40,9 +40,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DTOs\DogBreedDto.cs" />
     <Compile Include="DTOs\DogDto.cs" />
-    <Compile Include="Enums\DogBreedDto.cs" />
-    <Compile Include="Exceptions\DogBreedNotExistException.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\IDogService.cs" />
     <Compile Include="Services\ITicketService.cs" />
