--- a/CodeSmellsWithinClasses/RefactoringDogFront.csproj
+++ b/CodeSmellsWithinClasses/RefactoringDogFront.csproj
@@ -60,8 +60,8 @@
   <ItemGroup>
     <Compile Include="Mapper\DogMapper.cs" />
     <Compile Include="Refactor\Dog.cs" />
+    <Compile Include="Refactor\DogBreed.cs" />
     <Compile Include="Refactor\DogBuilder.cs" />
-    <Compile Include="Enum\DogBreedEnum.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
