--- a/RefactoringDog.Domain/RefactoringDog.Domain.csproj
+++ b/RefactoringDog.Domain/RefactoringDog.Domain.csproj
@@ -41,9 +41,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Entities\Dog.cs" />
-    <Compile Include="Enums\DogBreed.cs" />
+    <Compile Include="Entities\DogBreed.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
